Remove Angular Material layout directives from login component.

--- a/myreader-frontend/src/app/js/login/login.component.css
+++ b/myreader-frontend/src/app/js/login/login.component.css
@@ -1,12 +1,27 @@
-.login {
-    padding: 1rem;
+my-login {
     display: flex;
-    align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
-.login__form {
+.login {
+    flex-direction: column;
+    margin-top: 100px;
     width: 300px;
+}
+
+.login > * {
+    width: 300px;
+}
+
+.login__message {
+    height: 30px;
+}
+
+.login__message > span {
+    display: block;
+    color: rgb(255,87,34);
+    text-align: center;
 }
 
 .login__button {
