Fix unseen entries setting.

--- a/myreader-frontend/src/app/js/settings/settings.component.html
+++ b/myreader-frontend/src/app/js/settings/settings.component.html
@@ -8,7 +8,7 @@
 <label for="unseenEntries">Old entries</label>
 <my-choose id="unseenEntries"
            my-value="$ctrl.showUnseenEntries"
-           my-options="[{label: 'show', value: true}, {label: 'hide', value: false}]"
+           my-options="[{label: 'show', value: false}, {label: 'hide', value: true}]"
            my-on-choose="$ctrl.onShowUnseenEntriesChoose(option)">
 </my-choose>
 
