Add remove and append functionality to chips.

--- a/myreader-frontend/src/app/js/shared/component/chips/chip.component.html
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.component.html
@@ -1,3 +1,11 @@
-<ng-transclude ng-class="{'my-chip--selected': $ctrl.selected}"
+<ng-transclude ng-class="{'my-chip--selected': $ctrl.selected, 'my-chip--selectable': $ctrl.selectable}"
                ng-click="$ctrl.onSelect()">
 </ng-transclude>
+
+<button class="my-chip__remove-button"
+        type="button"
+        tabindex="-1"
+        ng-if="!$ctrl.disabled"
+        ng-click="$ctrl.onRemove()">
+    <my-icon my-type="close"></my-icon>
+</button>
