--- a/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
@@ -1,5 +1,4 @@
 my-chip {
-    cursor: pointer;
     border-radius: 16px;
     height: 32px;
     line-height: 32px;
@@ -10,8 +9,18 @@ my-chip {
     user-select: none;
 }
 
+.my-chip--selectable {
+    cursor: pointer;
+}
+
 .my-chip--selected {
     color: rgb(63, 81, 181);
     font-weight: bold;
     cursor: default;
+}
+
+.my-chip__remove-button {
+    border: 0;
+    padding: 0;
+    background-color: transparent;
 }
