--- a/myreader-frontend/src/app/js/shared/component/chips/chips-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/chips/chips-input.component.html
@@ -1,7 +1,7 @@
-<md-input-container class="md-block" md-no-float>
+<my-input-container>
     <input placeholder="{{$ctrl.myPlaceholder}}"
            autocomplete="off"
            ng-readonly="$ctrl.myDisabled"
            ng-model="$ctrl.model"
            ng-keyup="$ctrl.onKeyUp($event)">
-</md-input-container>
+</my-input-container>
