Replace md-input-container with my-input-container in search input component.

--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,10 +1,10 @@
-<md-input-container class="md-block my-search-input-container">
+<my-input-container class="md-block my-search-input-container">
     <my-icon class="my-search-input-container__search-icon" my-type="search"></my-icon>
     <input name="search"
            aria-label="Search"
            ng-model-options="{debounce: 250}"
            ng-change="$ctrl.onChange()"
            ng-model="$ctrl.value">
-</md-input-container>
+</my-input-container>
 
 
