--- a/myreader-frontend/src/app/js/feed/feed.component.css
+++ b/myreader-frontend/src/app/js/feed/feed.component.css
@@ -1,10 +1,12 @@
 .admin-feed-form {
     padding: 10px;
 }
-.my-feed__url-icon {
-    margin: 0;
-    right: 2px;
-    left: auto;
-    position: absolute;
-    top: 8px;
+
+.admin-feed-form__origin {
+    display: flex;
+    align-items: center;
+}
+
+.admin-feed-form__origin my-input-container {
+    flex-grow: 1;
 }
