Fix misplaced search icon in search input component after replacing md-input-container with my-input-container.

--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.css
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.css
@@ -1,12 +1,13 @@
+my-search-input {
+    display: flex;
+}
+
 .my-search-input-container {
+    flex-grow: 1;
     margin: 0;
-    padding-left: 36px;
 }
 
 .my-search-input-container__search-icon {
-    position: absolute;
-    top: 8px;
-    left: 2px;
-    right: auto;
-    width: 24px;
+    padding: 5px;
+    margin-top: 2px;
 }
