--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,5 +1,8 @@
+<my-icon class="my-search-input-container__search-icon"
+         my-type="search">
+</my-icon>
+
 <my-input-container class="md-block my-search-input-container">
-    <my-icon class="my-search-input-container__search-icon" my-type="search"></my-icon>
     <input name="search"
            aria-label="Search"
            ng-model-options="{debounce: 250}"
