--- a/myreader-frontend/src/app/js/subscription/subscription-list.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-list.component.html
@@ -4,7 +4,7 @@
         <md-list>
             <md-list-item class="md-2-line"
                           ng-click="$ctrl.navigateTo(subscription)"
-                          ng-repeat="subscription in $ctrl.subscriptions | filter: $ctrl.$stateParams.q">
+                          ng-repeat="subscription in $ctrl.subscriptions | filter: $ctrl.router.query.q">
                 <div layout="row">
                     <div class="md-list-item-text">
                         <div>
