Load subscription tags in app subscription route configuration.

--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -21,6 +21,7 @@
 
     <my-subscription-tag-panel my-disabled="$ctrl.pendingAction"
                                my-selected-item="$ctrl.subscription.tag"
+                               my-values="$ctrl.tags"
                                my-on-select="$ctrl.onSelectTag(value)"
                                my-on-clear="$ctrl.onClearTag()">
     </my-subscription-tag-panel>
