--- a/myreader-frontend/src/app/js/subscription/subscription-tag-panel/subscription-tag-panel.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-tag-panel/subscription-tag-panel.component.html
@@ -1,4 +1,4 @@
-<my-autocomplete-input my-label="Tag"
+<my-autocomplete-input my-label="'Tag'"
                        my-disabled="$ctrl.myDisabled"
                        my-selected-item="$ctrl.mySelectedItem"
                        my-values="$ctrl.myValues"
