--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,6 +1,4 @@
-<my-icon class="my-search-input-container__search-icon"
-         my-type="search">
-</my-icon>
+<my-icon my-type="search"></my-icon>
 
 <my-input-container class="md-block my-search-input-container">
     <input name="search"
