--- a/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.css
+++ b/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.css
@@ -1,3 +1,14 @@
-md-list-item {
-    border-top: 1px solid rgba(0, 0, 0, 0.12);
+.feed-fetch-error__item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    padding: 11px 0;
+}
+
+.feed-fetch-error__item > span {
+    color: rgba(0,0,0,0.54);
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: .01em;
+    line-height: 1.6em;
+    margin: 0;
 }
