--- a/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.html
+++ b/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.html
@@ -1,14 +1,11 @@
 <p ng-if="$ctrl.failures.length === 0">no errors</p>
 
-<md-list ng-if="$ctrl.failures.length > 0">
-    <md-list-item md-no-ink class="md-3-line" ng-repeat="item in $ctrl.failures track by item.uuid">
-        <div class="md-list-item-text">
-            <p>{{::item.message}}</p>
-            <p>{{::item.createdAt | timeago}}</p>
-        </div>
-    </md-list-item>
+<div class="feed-fetch-error__item" ng-repeat="item in $ctrl.failures track by item.uuid">
+    <span>{{::item.message}}</span>
+    <span>{{::item.createdAt | timeago}}</span>
+</div>
 
-    <md-list-item>
-        <my-load-more my-next="$ctrl.links.next" my-on-more="$ctrl.onMore(more)"></my-load-more>
-    </md-list-item>
-</md-list>
+<my-load-more my-next="$ctrl.links.next"
+              my-on-more="$ctrl.onMore(more)"
+              ng-if="$ctrl.failures.length > 0">
+</my-load-more>
