--- a/myreader-frontend/src/app/js/subscription/subscription-list.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-list.component.html
@@ -1,19 +1,11 @@
 <my-list-page my-on-search="$ctrl.onSearch(params)"
               my-on-refresh="$ctrl.refresh()">
     <my-list-panel>
-        <md-list>
-            <md-list-item class="md-2-line subscription-list__item"
-                          ng-click="$ctrl.navigateTo(subscription)"
-                          ng-repeat="subscription in $ctrl.subscriptions | filter: $ctrl.router.query.q">
-                <div layout="row">
-                    <div class="md-list-item-text">
-                        <div>
-                            <h3 ng-bind-html="subscription.title"></h3>
-                            <h4>{{::subscription.createdAt | timeago}}</h4>
-                        </div>
-                    </div>
-                </div>
-            </md-list-item>
-        </md-list>
+        <div class="subscription-list__item"
+             ng-click="$ctrl.navigateTo(subscription)"
+             ng-repeat="subscription in $ctrl.subscriptions | filter: $ctrl.router.query.q">
+            <h3 ng-bind-html="subscription.title"></h3>
+            <span>{{::subscription.createdAt | timeago}}</span>
+        </div>
     </my-list-panel>
 </my-list-page>
