Replace myText binding with transclusion for button component.

--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -28,16 +28,14 @@
         <my-button-group layout="row" layout-align="end center">
             <my-button
                     my-type="primary"
-                    my-text="Save"
                     my-on-click="$ctrl.onSave()"
-                    my-on-error="$ctrl.onError(error)">
+                    my-on-error="$ctrl.onError(error)">Save
             </my-button>
             <my-button
                     my-type="warn"
-                    my-text="Delete"
                     my-confirm="true"
                     my-on-click="$ctrl.onDelete()"
-                    my-on-error="$ctrl.onError(error)">
+                    my-on-error="$ctrl.onError(error)">Delete
             </my-button>
         </my-button-group>
     </form>
