--- a/myreader-frontend/src/app/js/login/login.component.html
+++ b/myreader-frontend/src/app/js/login/login.component.html
@@ -21,9 +21,8 @@
     </div>
 
     <my-button class="login__button"
-               my-text="Login"
                my-button-type="submit"
                my-on-click="$ctrl.onClick()"
-               my-on-error="$ctrl.onError()">
+               my-on-error="$ctrl.onError()">Login
     </my-button>
 </form>
