--- a/myreader-frontend/src/app/js/maintenance/maintenance-actions/maintenance-actions.component.html
+++ b/myreader-frontend/src/app/js/maintenance/maintenance-actions/maintenance-actions.component.html
@@ -1,9 +1,7 @@
 <h4>Maintenance</h4>
 
 <my-button-group>
-    <my-button
-            my-type="primary"
-            my-text="Refresh index"
-            my-on-click="$ctrl.onRefreshIndex()">
+    <my-button my-type="primary"
+               my-on-click="$ctrl.onRefreshIndex()">Refresh index
     </my-button>
 </my-button-group>
