--- a/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
@@ -11,11 +11,10 @@
     <my-button-group layout="row" layout-align="end center">
         <my-button
                 my-type="primary"
-                my-text="Save"
                 my-disabled="subscriptionForm.$invalid"
                 my-on-click="$ctrl.onSave()"
                 my-on-success="$ctrl.onSuccessSave(data)"
-                my-on-error="$ctrl.onErrorSave(error)">
+                my-on-error="$ctrl.onErrorSave(error)">Save
         </my-button>
     </my-button-group>
 </form>
