--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -36,19 +36,17 @@
     <my-button-group layout="row" layout-align="end center">
         <my-button
                 my-type="primary"
-                my-text="Save"
                 my-disabled="subscriptionForm.$invalid"
                 my-on-click="$ctrl.onSave()"
                 my-on-success="$ctrl.onSuccessSave(data)"
-                my-on-error="$ctrl.onErrorSave(error)">
+                my-on-error="$ctrl.onErrorSave(error)">Save
         </my-button>
         <my-button
                 my-type="warn"
-                my-text="Delete"
                 my-confirm="true"
                 my-on-click="$ctrl.onDelete()"
                 my-on-success="$ctrl.onSuccessDelete()"
-                my-on-error="$ctrl.onError(error)">
+                my-on-error="$ctrl.onError(error)">Delete
         </my-button>
     </my-button-group>
 </form>
