--- a/myreader-frontend/src/app/js/shared/component/button/button.component.html
+++ b/myreader-frontend/src/app/js/shared/component/button/button.component.html
@@ -4,7 +4,9 @@
         ng-class="$ctrl.myType ? 'md-' + $ctrl.myType : ''"
         ng-if="!$ctrl.showConfirmButton"
         ng-click="$ctrl.onClick()"
-        ng-disabled="$ctrl.isDisabled()">{{$ctrl.myText}}</md-button>
+        ng-disabled="$ctrl.isDisabled()">
+    <ng-transclude></ng-transclude>
+</md-button>
 
 <md-button
         class="md-raised my-button-confirm-left"
