--- a/myreader-frontend/src/app/js/shared/component/choose/choose.component.html
+++ b/myreader-frontend/src/app/js/shared/component/choose/choose.component.html
@@ -1,5 +1,4 @@
 <my-button ng-repeat="option in $ctrl.myOptions"
            ng-class="{'my-choose__button--selected': $ctrl.myValue === $ctrl.getValue(option)}"
-           my-text="{{$ctrl.getLabel(option)}}"
-           my-on-click="$ctrl.myOnChoose({option: $ctrl.getValue(option)})">
+           my-on-click="$ctrl.myOnChoose({option: $ctrl.getValue(option)})">{{$ctrl.getLabel(option)}}
 </my-button>
